# FluxPay

./: .env.example  .gitignore  API.md  CLAUDE.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  DEPLOY_QUICK.md  DEPLOY_TESTNET.md  DOCUMENTATION.md  FRONTEND_HANDOFF.md  IMPLEMENTATION.md  LICENSE  Procfile  README.md  docker-compose.yml  filestash.txt  install-foundry.ps1  package-lock.json  package.json  render.yaml  setup.ps1  start.ps1  vercel.json
backend/: .dockerignore  .env.example  .gitignore  BackendReadme.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: coordinator.py  verifier_agent.py  worker.py
backend/app/infrastructure/: db.py  logging.py  redis_client.py
backend/app/sources/: base.py  customer_urls.py  ecommerce.py  public_web.py  registry.py
backend/scripts/: _smart7702.ts  a2a-harness.ts  demo_onchain.py  diagnose-token.mjs  redeem-harness.ts
backend/src/: app.ts  index.ts
backend/src/config/: chains.ts  index.ts  loadEnv.ts
backend/src/database/: client.ts  connection.ts  schema.ts
backend/src/middleware/: index.ts
backend/src/models/: application.ts  deal.ts  job.ts  milestone.ts  payment.ts  permission.ts  postgres.ts  profile.ts  user.ts  (+1 more)
backend/tests/: deal.test.ts  dealService.test.ts  helpers.ts  job.test.ts  jobService.test.ts  multiCreator.test.ts  payment.test.ts  profile.test.ts  services.test.ts  settlementService.test.ts  test_auth_validation.py  test_jobs_quote.py  wallet.test.ts
(+317 files in other folders)
