[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxpay-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "fake-useragent>=1.5.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "anyio>=4.4.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
